--- a/debian/control
+++ b/debian/control
@@ -11,8 +11,8 @@ Build-Depends:
  libboost-dev (>=1.46),
  libboost-filesystem-dev (>=1.46),
  libboost-system-dev (>=1.46)
-Standards-Version: 3.9.2
-Homepage: http://karolis.5grupe.lt/home/phd/biosensor
+Standards-Version: 3.9.3
+Homepage: http://karolis.5grupe.lt/home/dev/index.html
 Vcs-Git: git://github.com/kape1395/biosensor.solver-2D.git
 Vcs-Browser: https://github.com/kape1395/biosensor.solver-2D
 
